refactor: Simplify immutability patterns with Lombok and Java stdlib
- Add Lombok dependency (v1.18.46) with provided scope for annotation processing
- Replace custom immutability helper methods with Map.copyOf() and List.copyOf() in record compact constructors
- Remove redundant null-check logic from ProblemDetails, TranslateEnvelope, and ConfigSnapshot
- Eliminate nested immutability helper methods (immutableMap, immutableList, immutableNestedMap)
- Replace manual getter methods in TranslatorException with Lombok @Getter and @Accessors(fluent = true)
- Simplify record compact constructors by removing boilerplate immutability code
- Reduces code duplication and improves maintainability while preserving immutability guarantees